// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The CommercialCanaries stack matches the Australia CODE snapshot 1`] = `
Object {
  "Resources": Object {
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-canary-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-ap-southeast-2/canary/ap-southeast-2/comm_cmp_canary_code",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-ap-southeast-2",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "Name": "comm_cmp_canary_code",
        "RunConfig": Object {
          "TimeoutInSeconds": 120,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-3.5",
        "Schedule": Object {
          "Expression": "rate(2 minutes)",
        },
        "StartCanaryAfterCreation": false,
        "Tags": Array [
          Object {
            "Key": "blueprint",
            "Value": "heartbeat",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:ap-southeast-2:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_code-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_code-ap-southeast-2",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Australia PROD snapshot 1`] = `
Object {
  "Resources": Object {
    "Alarm7103F465": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed",
        "AlarmName": "Commercial canary in Australia (ap-southeast-2) Alarm",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "CanaryName",
            "Value": "comm_cmp_canary_prod",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "SuccessPercent",
        "Namespace": "CloudWatchSynthetics",
        "OKActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-canary-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-ap-southeast-2/canary/ap-southeast-2/comm_cmp_canary_prod",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-ap-southeast-2",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "Name": "comm_cmp_canary_prod",
        "RunConfig": Object {
          "TimeoutInSeconds": 120,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-3.5",
        "Schedule": Object {
          "Expression": "rate(2 minutes)",
        },
        "StartCanaryAfterCreation": true,
        "Tags": Array [
          Object {
            "Key": "blueprint",
            "Value": "heartbeat",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:ap-southeast-2:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_prod-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_prod-ap-southeast-2",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TopicBFC7AF6E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "TopicName": "Commercial Canary Topic Australia",
      },
      "Type": "AWS::SNS::Topic",
    },
    "TopiccommercialcanariesguardiancoukA88DBBEE": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries@guardian.co.uk",
        "Protocol": "email",
        "TopicArn": Object {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Canada CODE snapshot 1`] = `
Object {
  "Resources": Object {
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-canary-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-ca-central-1/canary/ca-central-1/comm_cmp_canary_code",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-ca-central-1",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "Name": "comm_cmp_canary_code",
        "RunConfig": Object {
          "TimeoutInSeconds": 120,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-3.5",
        "Schedule": Object {
          "Expression": "rate(2 minutes)",
        },
        "StartCanaryAfterCreation": false,
        "Tags": Array [
          Object {
            "Key": "blueprint",
            "Value": "heartbeat",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:ca-central-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_code-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_code-ca-central-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Canada PROD snapshot 1`] = `
Object {
  "Resources": Object {
    "Alarm7103F465": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed",
        "AlarmName": "Commercial canary in Canada (ca-central-1) Alarm",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "CanaryName",
            "Value": "comm_cmp_canary_prod",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "SuccessPercent",
        "Namespace": "CloudWatchSynthetics",
        "OKActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-canary-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-ca-central-1/canary/ca-central-1/comm_cmp_canary_prod",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-ca-central-1",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "Name": "comm_cmp_canary_prod",
        "RunConfig": Object {
          "TimeoutInSeconds": 120,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-3.5",
        "Schedule": Object {
          "Expression": "rate(2 minutes)",
        },
        "StartCanaryAfterCreation": true,
        "Tags": Array [
          Object {
            "Key": "blueprint",
            "Value": "heartbeat",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:ca-central-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_prod-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_prod-ca-central-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TopicBFC7AF6E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "TopicName": "Commercial Canary Topic Canada",
      },
      "Type": "AWS::SNS::Topic",
    },
    "TopiccommercialcanariesguardiancoukA88DBBEE": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries@guardian.co.uk",
        "Protocol": "email",
        "TopicArn": Object {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the UK CODE snapshot 1`] = `
Object {
  "Resources": Object {
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-canary-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-eu-west-1/canary/eu-west-1/comm_cmp_canary_code",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-eu-west-1",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "Name": "comm_cmp_canary_code",
        "RunConfig": Object {
          "TimeoutInSeconds": 120,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-3.5",
        "Schedule": Object {
          "Expression": "rate(2 minutes)",
        },
        "StartCanaryAfterCreation": false,
        "Tags": Array [
          Object {
            "Key": "blueprint",
            "Value": "heartbeat",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:eu-west-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_code-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_code-eu-west-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the UK PROD snapshot 1`] = `
Object {
  "Resources": Object {
    "Alarm7103F465": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed",
        "AlarmName": "Commercial canary in UK (eu-west-1) Alarm",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "CanaryName",
            "Value": "comm_cmp_canary_prod",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "SuccessPercent",
        "Namespace": "CloudWatchSynthetics",
        "OKActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-canary-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-eu-west-1/canary/eu-west-1/comm_cmp_canary_prod",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-eu-west-1",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "Name": "comm_cmp_canary_prod",
        "RunConfig": Object {
          "TimeoutInSeconds": 120,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-3.5",
        "Schedule": Object {
          "Expression": "rate(2 minutes)",
        },
        "StartCanaryAfterCreation": true,
        "Tags": Array [
          Object {
            "Key": "blueprint",
            "Value": "heartbeat",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:eu-west-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_prod-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_prod-eu-west-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TopicBFC7AF6E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "TopicName": "Commercial Canary Topic UK",
      },
      "Type": "AWS::SNS::Topic",
    },
    "TopiccommercialcanariesguardiancoukA88DBBEE": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries@guardian.co.uk",
        "Protocol": "email",
        "TopicArn": Object {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the US CODE snapshot 1`] = `
Object {
  "Resources": Object {
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-canary-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-us-west-1/canary/us-west-1/comm_cmp_canary_code",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-us-west-1",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "Name": "comm_cmp_canary_code",
        "RunConfig": Object {
          "TimeoutInSeconds": 120,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-3.5",
        "Schedule": Object {
          "Expression": "rate(2 minutes)",
        },
        "StartCanaryAfterCreation": false,
        "Tags": Array [
          Object {
            "Key": "blueprint",
            "Value": "heartbeat",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:us-west-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_code-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_code-us-west-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the US PROD snapshot 1`] = `
Object {
  "Resources": Object {
    "Alarm7103F465": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed",
        "AlarmName": "Commercial canary in US (us-west-1) Alarm",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "CanaryName",
            "Value": "comm_cmp_canary_prod",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "SuccessPercent",
        "Namespace": "CloudWatchSynthetics",
        "OKActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-canary-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-us-west-1/canary/us-west-1/comm_cmp_canary_prod",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-us-west-1",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "Name": "comm_cmp_canary_prod",
        "RunConfig": Object {
          "TimeoutInSeconds": 120,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-3.5",
        "Schedule": Object {
          "Expression": "rate(2 minutes)",
        },
        "StartCanaryAfterCreation": true,
        "Tags": Array [
          Object {
            "Key": "blueprint",
            "Value": "heartbeat",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:us-west-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_prod-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_prod-us-west-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TopicBFC7AF6E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/aws-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "TopicName": "Commercial Canary Topic US",
      },
      "Type": "AWS::SNS::Topic",
    },
    "TopiccommercialcanariesguardiancoukA88DBBEE": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries@guardian.co.uk",
        "Protocol": "email",
        "TopicArn": Object {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
  },
}
`;
